--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                     <a href="https://www.facebook.com/cyberbiz.clinic/" target=" balnk"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>
-	            <a href="https://sl.linkedin.com/in/sulaiman-ndamisa" target=" balnk"><i class='bx bxl-twitter'></i></a>		
+                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>	
                 </div>
             </div>
         
@@ -187,7 +186,7 @@
 	    <h2>Welcome to CyberBiz Clinic!🌐</h2>	 
             <p>CyberBiz Clinic is committed to empowering individuals and transforming communities through technology and innovation. Our mission is to provide accessible digital literacy, professional skills training, and cutting-edge IT solutions that foster economic growth and bridge the digital divide. We envision a future where technology empowers every individual, creating opportunities for success and progress. By driving digital transformation, we aim to uplift Sierra Leone and inspire a global impact, paving the way for a connected, innovative, and inclusive world.</p>
 	    <h3>Who We Are:</h3>
-	    <p>Founded by a team of passionate IT and cybersecurity experts, CyberBiz Clinic is dedicated to protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
+	    <p>Founded by a team of passionate IT, Cybersecurity and Business experts, CyberBiz Clinic is dedicated to empowering and transforming individuals, protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
 	    <h3>Our Vision:</h3>
 	    <p>To be the leading provider of innovative IT and cybersecurity solutions, empowering businesses to thrive in a secure digital environment.</p>	
 	    <h3>Our Mission</h3>
