--- a/index.html
+++ b/index.html
@@ -184,19 +184,26 @@
         <div class="about-content scroll-scale">
             <span><h2>About Us</2></span>
 	    <h2>Welcome to CyberBiz Clinic!🌐</h2>	 
-            <p>CyberBiz Clinic is committed to empowering individuals and transforming communities through technology and innovation. Our mission is to provide accessible digital literacy, professional skills training, and cutting-edge IT solutions that foster economic growth and bridge the digital divide. We envision a future where technology empowers every individual, creating opportunities for success and progress. By driving digital transformation, we aim to uplift Sierra Leone and inspire a global impact, paving the way for a connected, innovative, and inclusive world.</p>
 	    <h3>Who We Are:</h3>
-	    <p>Founded by a team of passionate IT, Cybersecurity and Business experts, CyberBiz Clinic is dedicated to empowering and transforming individuals, protecting and enhancing your business through innovative technology solutions. We understand the unique challenges faced by businesses in the digital age and are committed to delivering top-notch services that are both effective and affordable.</p>	
+	    <p>CyberBiz Clinic is dedicated to bridging the digital divide in Sierra Leone by providing transformative tech solutions. Based in Kono District, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce. Our goal is to fuel economic growth and position Sierra Leone as a leader in digital innovation.
+	    We operate through five specialized units:<br>
+	    EmpHub – Digital literacy and skills training.<br>
+	    SaniTech – Comprehensive IT solutions.<br>
+	    DigCizen – Digital presence building for institutions.<br>
+	    Sierra Intelligence Agency (SIA) – AI innovation, intelligence gathering, and cybersecurity.<br>
+	    AccessEcom – Digital marketplace for business growth.
+	    </p>	
 	    <h3>Our Vision:</h3>
-	    <p>To be the leading provider of innovative IT and cybersecurity solutions, empowering businesses to thrive in a secure digital environment.</p>	
+	    <p>To make Sierra Leone a global leader in digital transformation, empowering institutions, businesses, and individuals to succeed in a tech-driven world.</p>	
 	    <h3>Our Mission</h3>
-	    <p>To deliver exceptional IT and cybersecurity services that protect and enhance our clients’ businesses, ensuring their success in the digital age.</p>
+	    <p>To empower minds and transform lives through technology by offering innovative digital solutions and training, building a digitally connected and thriving economy.</p>
 	    <h3>Our Plan</h3>
 	    <p>
-	        <h4>Innovation</h4>: Continuously develop and implement cutting-edge technology solutions to meet the evolving needs of our clients.<br>
-                <h4>Customer Focus</h4>: Maintain a customer-centric approach, ensuring that our services are tailored to the specific requirements of each business.<br>
-                <h4>Growth</h4>: Expand our service offerings and reach to support more businesses globally.<br>
-		<h4>Excellence</h4>: Uphold the highest standards of quality and professionalism in all our services.<br> 
+	        <h4>EmpHub</h4>: Empower through Digital Literacy – EmpHub delivers accessible training to foster new opportunities for employment and entrepreneurship.<br>
+                <h4>SaniTech</h4>:Provide IT Solutions – SaniTech offers IT services, from web development to tech consultancy, for public and private institutions.<br>
+                <h4>DigCizen</h4>: Expand Digital Citizenship – DigCizen helps institutions build secure and accessible online presences.<br>
+		<h4>Sierra Intelligence Agency</h4>: Leverage AI and Cybersecurity – SIA focuses on AI-driven innovation, intelligence gathering, and cybersecurity solutions.<br>
+		<h4>AccessEcom</h4>: Build a Digital Marketplace – AccessEcom creates e-commerce opportunities to support Sierra Leone’s economy.   
 	    </p>  	
             <div class="btn-box">
                 <a href="#services" class="btn">Explore</a>
