--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	    <h3>Who We Are:</h3>
 	    <p>CyberBiz Clinic is dedicated to bridging the digital divide in Sierra Leone by providing transformative tech solutions. Based in Kono District, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce. Our goal is to fuel economic growth and position Sierra Leone as a leader in digital innovation.
 	    We operate through five specialized units:<br>
-	    EmpHub – Digital literacy and skills training.<br>
+	    <span>EmpHub</span> – Digital literacy and skills training.<br>
 	    SaniTech – Comprehensive IT solutions.<br>
 	    DigCizen – Digital presence building for institutions.<br>
 	    Sierra Intelligence Agency (SIA) – AI innovation, intelligence gathering, and cybersecurity.<br>
