--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
 	    <h3>Who We Are:</h3>
 	    <p>CyberBiz Clinic is dedicated to bridging the digital divide in Sierra Leone by providing transformative tech solutions. Based in Kono District, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce. Our goal is to fuel economic growth and position Sierra Leone as a leader in digital innovation.
 	    We operate through five specialized units:<br>
-	    <strong>EmpHub</strong> – Digital literacy and skills training.<br>
-	    SaniTech – Comprehensive IT solutions.<br>
-	    DigCizen – Digital presence building for institutions.<br>
-	    Sierra Intelligence Agency (SIA) – AI innovation, intelligence gathering, and cybersecurity.<br>
-	    AccessEcom – Digital marketplace for business growth.
+	    <h4>EmpHub</h4> – Digital literacy and skills training.<br>
+	    <h4>SaniTech</h4> – Comprehensive IT solutions.<br>
+	    <h4>DigCizen</h4> – Digital presence building for institutions.<br>
+	    <h4>Sierra Intelligence Agency (SIA)</h4> – AI innovation, intelligence gathering, and cybersecurity.<br>
+	    <h4>AccessEcom</h4> – Digital marketplace for business growth.
 	    </p>	
 	    <h3>Our Vision:</h3>
 	    <p>To make Sierra Leone a global leader in digital transformation, empowering institutions, businesses, and individuals to succeed in a tech-driven world.</p>	
