--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
 	    <p>To empower minds and transform lives through technology by offering innovative digital solutions and training, building a digitally connected and thriving economy.</p>
 	    <h3>Our Plan</h3>
 	    <p>
-	        <h4>EmpHub</h4>: Empower through Digital Literacy – EmpHub delivers accessible training to foster new opportunities for employment and entrepreneurship.<br>
-                <h4>SaniTech</h4>:Provide IT Solutions – SaniTech offers IT services, from web development to tech consultancy, for public and private institutions.<br>
-                <h4>DigCizen</h4>: Expand Digital Citizenship – DigCizen helps institutions build secure and accessible online presences.<br>
-		<h4>Sierra Intelligence Agency</h4>: Leverage AI and Cybersecurity – SIA focuses on AI-driven innovation, intelligence gathering, and cybersecurity solutions.<br>
-		<h4>AccessEcom</h4>: Build a Digital Marketplace – AccessEcom creates e-commerce opportunities to support Sierra Leone’s economy.   
+	        <h4>Empower through Digital Literacy</h4>: – EmpHub delivers accessible training to foster new opportunities for employment and entrepreneurship.<br>
+                <h4>Provide IT Solutions</h4>: – SaniTech offers IT services, from web development to tech consultancy, for public and private institutions.<br>
+                <h4>Expand Digital Citizenship</h4>: – DigCizen helps institutions build secure and accessible online presences.<br>
+		<h4>Leverage AI and Cybersecurity</h4>: – SIA focuses on AI-driven innovation, intelligence gathering, and cybersecurity solutions.<br>
+		<h4>Build a Digital Marketplace</h4>: – AccessEcom creates e-commerce opportunities to support Sierra Leone’s economy.   
 	    </p>  	
             <div class="btn-box">
                 <a href="#services" class="btn">Explore</a>
