--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
         <div class="about-content scroll-scale">
             <span><h2>About Us</2></span>
-	    <h2>Welcome to CyberBiz Clinic!🌐</h2>	 
+	    <h2>CyberBiz Clinic!🌐</h2>	 
 	    <h3>Who We Are:</h3>
 	    <p>CyberBiz Clinic is dedicated to bridging the digital divide in Sierra Leone by providing transformative tech solutions. Based in Kono District, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce. Our goal is to fuel economic growth and position Sierra Leone as a leader in digital innovation.
 	    We operate through five specialized units:<br>
