--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <link rel='stylesheet' href="style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">    
     </head>
     <body>
 <!-- home section ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
@@ -40,7 +41,7 @@
                         <span class="word">AccessEcom&nbspUnit</span>  
                     </h3>
                 </div>
-		<h3><span>CyberBiz Clinic:</span> is Driving Digital Transformation and Empowering Communities through Innovative Technology in Sierra Leone and beyond.</h3>
+		<h3><span>CyberBiz Clinic</span> is Driving Digital Transformation and Empowering Communities through Innovative Technology in Sierra Leone and beyond.</h3>
 		<h4>At <span>CyberBiz Clinic</span>, we don’t just protect your digital assets; we empower your business to thrive in the digital age. Our name says it all</h4>		
 		<p><span>Cyber</span>: Cutting-edge cybersecurity solutions tailored to your unique needs.<br>
                    <span>Biz</span>: Business-focused strategies that drive growth and efficiency.<br>
@@ -67,7 +68,9 @@
                     <a href="https://www.facebook.com/cyberbiz.clinic/" target=" balnk"><i class='bx bxl-facebook'></i></a>
                     <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>	
+                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>
+		    <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class="fab fa-twitter"></i></a>
+	
                 </div>
             </div>
         
