--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>
-		    <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class="fab fa-twitter"></i></a>
+		    <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class="fab fa-twitter-x"></i></a>
 	
                 </div>
             </div>
