--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <link rel='stylesheet' href="style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">    
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">    
     </head>
     <body>
 <!-- home section ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
@@ -69,7 +69,7 @@
                     <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
                     <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>
-		    <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class="fab fa-twitter-x"></i></a>
+		    <a href=""><i class="bi bi-twitter-x"></i></a>
 	
                 </div>
             </div>
