--- a/index.html
+++ b/index.html
@@ -65,14 +65,12 @@
                 </div>
         
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/cyberbiz.clinic/" target=" balnk"><i class='bx bxl-facebook'></i></a>
-                    <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class='bx bxl-instagram'></i></a>
-                    <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class='bx bxl-github'></i></a>
-                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class='bx bxl-linkedin'></i></a>
-		    <a href=""><i class="bi bi-twitter-x"></i></a>
-		    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>	
+		    <a href="https://www.facebook.com/cyberbiz.clinic/" target=" balnk"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/iamcyberbiz" target=" balnk"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/cyberbiz-clinic/?viewAsMember=true" target=" balnk"><i class="bi bi-linkedin"></i></a>
+		    <a href="https://www.github.com/cyberbiz232" target=" balnk"><i class="bi bi-github"></i></a>
+		    <a href=""><i class="bi bi-twitter-x"></i></a>	
+		    	
 	
                 </div>
             </div>
