--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
             <span><h2>About Us</2></span>
 	    <h2>CyberBiz Clinic!🌐</h2>	 
 	    <h3>Who We Are:</h3>
-	    <p>CyberBiz Clinic is dedicated to bridging the digital divide in Sierra Leone by providing transformative tech solutions. Based in Kono District, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce. Our goal is to fuel economic growth and position Sierra Leone as a leader in digital innovation.
-	    We operate through five specialized units:<br>
+	    <p>CyberBiz Clinic bridges the digital divide in Sierra Leone with transformative tech solutions. Based in Kono, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce, fostering economic growth and digital innovation. We operate through five specialized units:<br>
 	    <h4>EmpHub</h4> – Digital literacy and skills training.<br>
 	    <h4>SaniTech</h4> – Comprehensive IT solutions.<br>
 	    <h4>DigCizen</h4> – Digital presence building for institutions.<br>
