--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
         </div>
 
         <div class="about-content scroll-scale">
-            <span><h2>About Us</2></span>
-	    <h2>CyberBiz Clinic!🌐</h2>	 
+            <span><h2>About Us</2></span> 
 	    <h3>Who We Are:</h3>
 	    <p>CyberBiz Clinic bridges the digital divide in Sierra Leone with transformative tech solutions. Based in Kono, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce, fostering economic growth and digital innovation. We operate through five specialized units:<br>
 	    <h4>EmpHub</h4> – Digital literacy and skills training.<br>
@@ -219,6 +218,14 @@
         <div class="main-text scroll-scale">
             <span>Here is a comprehensive list of what we can help you achieve for you, your organization or your business</span>
             <h2>Our Services</h2>
+        </div>
+	<div class="filter-buttons scroll-scale">
+                <button class="button" data-filter="all">All</button>
+                <button class="button" data-filter=".emp">EmpHub</button>
+                <button class="button" data-filter=".sani">SaniTech</button>
+                <button class="button" data-filter=".cizen">DigCizen</button>
+		<button class="button" data-filter=".sia">S.I.A</button>
+		<button class="button" data-filter=".aecom">AccessEcom</button>
         </div>    
         <div class="section-services">
 
