--- a/index.html
+++ b/index.html
@@ -218,18 +218,18 @@
         <div class="main-text scroll-scale">
             <span>Here is a comprehensive list of what we can help you achieve for you, your organization or your business</span>
             <h2>Our Services</h2>
-	<div class="filter-buttons scroll-scale">
-                <button class="button" data-filter="all">All</button>
-                <button class="button" data-filter=".emp">EmpHub</button>
-                <button class="button" data-filter=".sani">SaniTech</button>
-                <button class="button" data-filter=".cizen">DigCizen</button>
-		<button class="button" data-filter=".sia">S.I.A</button>
-		<button class="button" data-filter=".aecom">AccessEcom</button>
-        </div> 	
+		<div class="filter-buttons scroll-scale">
+	                <button class="button" data-filter="all">All</button>
+	                <button class="button" data-filter=".emp">EmpHub</button>
+	                <button class="button" data-filter=".sani">SaniTech</button>
+	                <button class="button" data-filter=".cizen">DigCizen</button>
+			<button class="button" data-filter=".sia">S.I.A</button>
+			<button class="button" data-filter=".aecom">AccessEcom</button>
+	        </div> 	
         </div>   
         <div class="section-services">
 
-	    <div class="service-box">
+	    <div class="service-box mix sia">
                 <i class='bx bxs-check-shield bx-tada service-icon'></i>
                 <h3>Cybersecurity Solutions</h3>
                 <p>
@@ -244,7 +244,7 @@
                 </div>
             </div>
 		
-            <div class="service-box">
+            <div class="service-box mix aecom">
 		<i class='bx bxs-business bx-fade-down service-icon'></i>    
                 <h3>Business Consulting</h3>
                 <p>
@@ -259,7 +259,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div class="service-box mix sani">
                 <i class='bx bxs-cog bx-fade-up service-icon' ></i>
                 <h3>Managed IT Services</h3>
                 <p>
@@ -274,7 +274,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div class="service-box mix aecom">
 		<i class='bx ' ></i>    
                 <i class='bx bxs-store bx-flashing bx-flip-horizontal service-icon' ></i>
                 <h3>Digital Marketing</h3>
@@ -290,7 +290,7 @@
                 </div>
             </div>
 
-            <div class="service-box">    
+            <div class="service-box mix aecom">    
                 <i class='bx bx-cart bx-fade-left service-icon' ></i>
                 <h3>E-commerce</h3>
                 <p>
@@ -305,7 +305,7 @@
                 </div>
             </div>
 
-            <div class="service-box">    
+            <div class="service-box mix sia">    
                 <i class='bx bx-tachometer bx-flashing service-icon' ></i>
                 <h3>Risk Management</h3>
                 <p>
@@ -320,7 +320,7 @@
                 </div>
             </div>
 
-            <div class="service-box">   
+            <div class="service-box mix sani">   
                 <i class='bx bxs-cube bx-fade-down service-icon' ></i>
                 <h3>Virtual CIO/CTO </h3>
                 <p>
@@ -335,7 +335,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div class="service-box mix sia">
                 <i class='bx bx-data bx-tada service-icon' ></i>
                 <h3>Data Analytics</h3>
                 <p>
@@ -350,7 +350,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div class="service-box mix sani">
                 <i class='bx bxs-cloud bx-flashing service-icon' ></i>
                 <h3>Cloud Solutions</h3>
                 <p>
@@ -365,7 +365,7 @@
                 </div>
             </div>
 
-            <div class="service-box">
+            <div class="service-box mix sia">
                 <i class='bx bx-brain bx-tada service-icon' ></i>
                 <h3>Artificial Intelligence</h3>
                 <p>
