--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <span><h2>About Us</2></span> 
 	    <h3>Who We Are:</h3>
 	    <p>CyberBiz Clinic bridges the digital divide in Sierra Leone with transformative tech solutions. Based in Kono, we empower individuals, businesses, and institutions through digital literacy, IT services, AI, and e-commerce, fostering economic growth and digital innovation. We operate through five specialized units:<br>
-	    <h4>EmpHub</h4> – Digital literacy and skills training.<br>
+	    <h4>EmpHub</h4> – Digital literacy and professional skills training.<br>
 	    <h4>SaniTech</h4> – Comprehensive IT solutions.<br>
 	    <h4>DigCizen</h4> – Digital presence building for institutions.<br>
 	    <h4>Sierra Intelligence Agency (SIA)</h4> – AI innovation, intelligence gathering, and cybersecurity.<br>
